15.jun (ws)
      - add pictures.mscx as demo for new section break
      - configurable playback pause for section break
      - implement short playback pause for breath
      - implement fermata as tempo change
      - implement playback pause for section break
14.jun (ws)
      - insert/delete time signatures: handle horizontal frames
13.jun (ws)
      - no color and invisible properties for LAYOUT_BREAK elements
      - insert/delete time signatures: handle slurs
      - new style parameters for slur line thickness
12.jun (lv)
      - #5637 support reading bww files: error reporting
10.jun (ws)
      - insert/delete time signatures: split notes
      - new: section break
8.jun (ws)
      - insert/delete time signatures: new implementation keeps all notes (incomplete)
6.jun (ws)
      - big refactoring
3.jun (lv)
      - support reading bww files: initial (incomplete) implementation
        feature request http://musescore.org/en/node/5637
      (ws)
      - added StaffType() and EditStaffType() classes
27.may (ws)
      - removed PortAudio audio interface from linux version
      - Extend ALSA interface for non dma access. This should work with
        desktop PulseAudio.
        (la)
      - fix #5897: > and < are not read back from saved score
26.may (ws)
      - fix #5867: End Repeat disappears when creating multimeasure rests
      - refacturing of playback architecture in progress
      - playback of arpeggios which are spanning more than one staff
24.may (lv)
      - add bww files to open file dialog, actual import not implemented yet
        feature request http://musescore.org/en/node/5637
      - add preliminary code for bww2mxml in a separate subdirectory
21.may (ws)
      - new: arpeggios spanning more than one staff (shift + up/down in
        edit mode)
      - new: switch between tablature and normal staff
20.may (ws)
      - new: fret diagram editor
19.may (ws)
      - new: fret diagrams
18.may (ws)
      - new: more Pedal line types
17.may (ws)